[package]
name = "orgman-front"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgman-api = { path = "../api" }

dotenvy_macro = "0.15"
ori = { git = "https://github.com/ChangeCaps/ori", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "ui"
path = "src/main.rs"
